--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,127 +1,128 @@
 /*FONTS*/
 @font-face {
-  font-family: LondrinaSolid;
-  src: url("./fonts/LondrinaSolid-Regular.ttf");
+    font-family: LondrinaSolid;
+    src: url("./fonts/LondrinaSolid-Regular.ttf");
 }
 @font-face {
-  font-family: LondrinaSolid;
-  src: url("./fonts/LondrinaSolid-Black.ttf");
-  font-weight: bold;
+    font-family: LondrinaSolid;
+    src: url("./fonts/LondrinaSolid-Black.ttf");
+    font-weight: bold;
 }
 @font-face {
-  font-family: LondrinaSolid;
-  src: url("./fonts/LondrinaSolid-Thin.ttf");
-  font-weight: 100;
+    font-family: LondrinaSolid;
+    src: url("./fonts/LondrinaSolid-Thin.ttf");
+    font-weight: 100;
 }
 @font-face {
-  font-family: LondrinaSolid;
-  src: url("./fonts/LondrinaSolid-Light.ttf");
-  font-weight: 300;
+    font-family: LondrinaSolid;
+    src: url("./fonts/LondrinaSolid-Light.ttf");
+    font-weight: 300;
 }
 
 /*COLORS*/
 :root {
-  --green: #28cd25;
-  --secondaryGreen: #77d39b;
-  --bgPrimary: #101820;
-  --bgSecondary: #1e2832;
-  --bgLight: #f7fff3;
-  --white: #ffffff;
-  --black: #000000;
-  --gray: #c4c4c4;
-  --red: #cf4141;
-  --blue: #1c1cd9;
-  --warning: #e4a951;
-  --danger: #dd4141;
-  --success: #0fa958;
-  --grayTransparent: rgba(196, 196, 196, 0.4);
-  --darkGray: #616974;
+    --green: #28cd25;
+    --secondaryGreen: #77d39b;
+    --bgPrimary: #101820;
+    --bgSecondary: #1e2832;
+    --bgLight: #f7fff3;
+    --white: #ffffff;
+    --black: #000000;
+    --gray: #c4c4c4;
+    --red: #cf4141;
+    --blue: #1c1cd9;
+    --warning: #e4a951;
+    --danger: #dd4141;
+    --success: #0fa958;
+    --grayTransparent: rgba(196, 196, 196, 0.4);
+    --darkGray: #616974;
 }
 
 /*VARIABLES*/
 :root {
-  --defaultFontSize: 1em;
+    --defaultFontSize: 1em;
 }
 
 /*-------------------------------- STYLES --------------------------------*/
 html,
 body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  font-family: "LondrinaSolid";
-  background-color: var(--bgPrimary);
-  color: var(--white);
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    font-family: "LondrinaSolid";
+    background-color: var(--bgPrimary);
+    color: var(--white);
+    user-select: none;
 }
 
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 /*-------------------------------- ANIMATIONS --------------------------------*/
 @keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 @-webkit-keyframes spin {
-  0% {
-    -webkit-transform: rotate(0deg);
-  }
-  100% {
-    -webkit-transform: rotate(360deg);
-  }
+    0% {
+        -webkit-transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+    }
 }
 
 /*-------------------------------- MODAL --------------------------------*/
 .darkBG {
-  background-color: rgba(0, 0, 0, 0.39);
-  width: 100%;
-  height: 100vh;
-  z-index: 0;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  position: absolute;
+    background-color: rgba(0, 0, 0, 0.39);
+    width: 100%;
+    height: 100vh;
+    z-index: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    position: absolute;
 }
 
 .centered {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .modal {
-  width: 90vw;
-  height: 90vh;
-  background: var(--bgSecondary);
-  color: white;
-  z-index: 10;
-  border-radius: 16px;
-  box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.04);
+    width: 90vw;
+    height: 90vh;
+    background: var(--bgSecondary);
+    color: white;
+    z-index: 10;
+    border-radius: 16px;
+    box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.04);
 }
 
 .modalHeader {
-  height: 4rem;
-  background: var(--bgSecondary);
-  border-top-left-radius: 16px;
-  border-top-right-radius: 16px;
+    height: 4rem;
+    background: var(--bgSecondary);
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
 }
 
 .heading {
-  margin: 0;
-  padding: 10px;
-  color: #2c3e50;
-  font-weight: 500;
-  font-size: 18px;
-  text-align: center;
+    margin: 0;
+    padding: 10px;
+    color: #2c3e50;
+    font-weight: 500;
+    font-size: 18px;
+    text-align: center;
 }
