--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -136,5 +136,9 @@ body {
 .community-card{
     width: 100%;
     scroll-snap-align: start;
+}
 
+.community-card-separator{
+    border: 2px solid var(--gray);
+    border-radius: 5px;
 }
