background pos and minor bugs

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -53,6 +53,7 @@ body {
     background-color: var(--bgPrimary);
     color: var(--white);
     user-select: none;
+    overscroll-behavior: none;
 }
 
 *,
